--- a/GrassTesting/appsettings.json
+++ b/GrassTesting/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppConnection": "Server=(localdb)\\mssqllocaldb;Database=travian;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppConnection": "Server=ms-sql-9.in-solve.ru; Database=1gb_trava; Persist Security Info=True; User ID=1gb_jeer; Password=4b4d3a19;"
   },
   "Logging": {
     "LogLevel": {
